{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 80,
  "lineage": "20601ff7-9040-4a67-b691-01463db92cf5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:045527813769:instance/i-00993c70946ce82fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00993c70946ce82fa",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0468077bc81f8784a",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_ip": "10.0.1.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c165a0b2c1315759",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0347bfdd6b5149e2e",
            "tags": {
              "Name": "server_01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033fb509831b61c59",
              "sg-08299c219200cc163"
            ]
          },
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.subnet_default",
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:045527813769:instance/i-090b1bb04b0efdc46",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090b1bb04b0efdc46",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03cb7d941a46b80a1",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_ip": "10.0.1.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084497f07157325c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0347bfdd6b5149e2e",
            "tags": {
              "Name": "server_02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033fb509831b61c59",
              "sg-08299c219200cc163"
            ]
          },
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.subnet_default",
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:045527813769:instance/i-07c01960f933403f0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c01960f933403f0",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c309ba9292c73329",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_ip": "10.0.1.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02422377fdba330be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0347bfdd6b5149e2e",
            "tags": {
              "Name": "server_03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033fb509831b61c59",
              "sg-0d0812bfe17d26bd5"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_sg",
            "aws_security_group.worker_sg",
            "aws_subnet.subnet_default",
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:security-group/sg-08299c219200cc163",
            "description": "SG dos nodes Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08299c219200cc163",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Trafego dentro do proprio SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "control-plane-sg",
            "name_prefix": null,
            "owner_id": "045527813769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033061a8d27219761"
          },
          "dependencies": [
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_api_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:security-group/sg-094c59e4757a0ce4b",
            "description": "SG do Kubernetes API Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094c59e4757a0ce4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Trafego dentro do proprio SG",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Trafego dentro do proprio SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "kubernetes-api-server-sg",
            "name_prefix": null,
            "owner_id": "045527813769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033061a8d27219761"
          },
          "dependencies": [
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:security-group/sg-033fb509831b61c59",
            "description": "SG de SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033fb509831b61c59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ssh-sg",
            "name_prefix": null,
            "owner_id": "045527813769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033061a8d27219761"
          },
          "dependencies": [
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:security-group/sg-0d0812bfe17d26bd5",
            "description": "SG dos nodes Workers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0812bfe17d26bd5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Trafego dentro do proprio SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "worker-sg",
            "name_prefix": null,
            "owner_id": "045527813769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033061a8d27219761"
          },
          "dependencies": [
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:subnet/subnet-0347bfdd6b5149e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0347bfdd6b5149e2e",
            "map_public_ip_on_launch": false,
            "owner_id": "045527813769",
            "tags": {
              "Name": "subrede-default"
            },
            "vpc_id": "vpc-033061a8d27219761"
          },
          "dependencies": [
            "aws_vpc.vpc_default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045527813769:vpc/vpc-033061a8d27219761",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d73d807a8edda9ef",
            "default_route_table_id": "rtb-0531a68e2403902d4",
            "default_security_group_id": "sg-0865c27366d591d41",
            "dhcp_options_id": "dopt-596f0a23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-033061a8d27219761",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0531a68e2403902d4",
            "owner_id": "045527813769",
            "tags": {
              "Name": "vpc-default"
            }
          }
        }
      ]
    }
  ]
}